test/conformance/chainsaw/events/clusterpolicy/message-exceeds-1024-characters/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: default
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
