test/conformance/chainsaw/events/clusterpolicy/message-exceeds-1024-characters/event-assert.yaml
apiVersion: v1
kind: Event
metadata:
  namespace: default
involvedObject:
  apiVersion: v1
  kind: Pod
  name: badpod01
  namespace: default
type: Warning
reason: PolicyViolation
action: Resource Passed
reportingComponent: kyverno-scan
message: 'policy podsecurity-subrule-restricted/restricted fail: Validation rule ''restricted''
  failed. It violates PodSecurity "restricted:latest": (Forbidden reason: unrestricted
  capabilities, field error list: [spec.containers[0].securityContext.capabilities.drop:
  Required value])'
