test/conformance/chainsaw/events/clusterpolicy/message-exceeds-1024-characters/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: podsecurity-subrule-restricted
spec: {}
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
