test/conformance/chainsaw/events/clusterpolicy/message-exceeds-1024-characters/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: message-exceeds-1024-characters
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: podsecurity-subrule-restricted
  - name: step-02
    try:
    - apply:
        file: resource.yaml
  - name: step-03
    try:
    - assert:
        file: event-assert.yaml
